# Python-Telegram-Bot-Template

./: .env.example  .gitignore  AIOGRAM_VERIFICATION_SUMMARY.md  DATABASE_SWITCHING_SUMMARY.md  DOCUMENTATION_UPDATES_SUMMARY.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  bot.py  cli.py  conftest.py  docker-compose.yml  example_bot copy.py  main.py  polling.py  project.py  pyproject.toml  requirements.txt  run.py  run_tests.py  test_setup.py  webhook.py
.trae/documents/: Implement Modular, Switchable Database System in Aiogram Project.md
app/: bot.py  config.py
app/db/: base.py
app/dev_tools/: __init__.py  dev_commands.py
app/middlewares/: admin_middleware.py  ban_middleware.py  joincheck_middleware.py
app/modules/: __init__.py
app/utils/: decorators.py  logger.py  router_utils.py
bot/: __init__.py  application.py  factory.py
core/: __init__.py  config.py  database.py  logger.py  middleware.py  postgres.py  runner.py
docker/: Dockerfile  docker-compose.yml
docs/: DOCUMENTATION_REFACTOR_SUMMARY.md  PROJECT_STRUCTURE.md  README.md
examples/: database_switching_demo.py  example_bot.py  logging_demo.py  logging_toggle_demo.py  postgresql_example.py
scripts/: analyze_logs.py
services/: __init__.py  base.py  polling.py  webhook.py
tests/: README.md  __init__.py  test_adapter_basic.py  test_bot.py  test_core.py  test_db.py  test_integration.py  test_postgres.py  test_services.py  test_setup.py  test_utils.py  utils.py
utils/: __init__.py  cache.py  files.py  formatters.py  keyboards.py  logging_utils.py  text.py  validators.py
(+76 files in other folders)
